# julia-set-renderer

./: CMakeLists.txt  LICENSE  README.md  main.cpp  shell.nix
.cache/clangd/index/: ALCheck.cpp.9F5924232D042EEA.idx  ALCheck.hpp.B28F7B29C405139E.idx  AlResource.cpp.C40E2EA562518624.idx  AlResource.hpp.9F4501464703306A.idx  AudioDevice.cpp.4263C42DB20FD378.idx  AudioDevice.hpp.562EB151DC64C768.idx  BlendMode.cpp.586E37B07D38092C.idx  BlendMode.hpp.8629BF59679ED0A3.idx  CircleShape.cpp.C6C5FA59504F4010.idx  CircleShape.hpp.504C55C3AD9981ED.idx  Clipboard.cpp.ADEF650CEB7AA8DB.idx  Clipboard.hpp.916C18AFFB60774D.idx  ClipboardImpl.cpp.B43FD10576DFA255.idx  ClipboardImpl.hpp.240C715DC9ADDF60.idx  ClipboardImpl.hpp.A6C2019904A8A94B.idx  Clock.cpp.304A0CD2FA069B98.idx  Clock.hpp.07933CCB77C11DDE.idx  ClockImpl.cpp.A68197F1CADE07E1.idx  ClockImpl.hpp.85AB641499FE6CAB.idx  Color.cpp.E711782BBE21C72D.idx  Color.hpp.4B07259A61DF9F97.idx  Config.hpp.F7CA4D0B8519CC17.idx  Context.cpp.7F6D00C5F6792463.idx  Context.hpp.74F384F1A6BA401F.idx  ContextSettings.hpp.C6E8B195DD107069.idx  ConvexShape.cpp.547B77ABC78A4A8A.idx  ConvexShape.hpp.C5BF091635AFC58F.idx  Cursor.cpp.5A5B4FCE9C9D5435.idx  Cursor.hpp.8F48F9280619F5A5.idx  CursorImpl.cpp.869302CBF1635966.idx  CursorImpl.hpp.6810E5D0B0487208.idx  CursorImpl.hpp.8A87BA4D5FC1C256.idx  Display.cpp.6F730BDF28B59194.idx  Display.hpp.50CE4F1A14C384CF.idx  Drawable.hpp.3AE5969334AC288B.idx  Err.cpp.E604BF8F521236D1.idx  Err.hpp.A13E49D29A9A176E.idx  Event.hpp.BC1F7A038FB0643A.idx  Export.hpp.0D707CD136B616E7.idx  (+227 more)
assets/: fractal.frag
